k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devflow-backend
  namespace: devflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devflow
      tier: backend
  template:
    metadata:
      labels:
        app: devflow
        tier: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/vicky2-code/devops-cloud-automation-platform-backend:latest
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: devflow-backend
  namespace: devflow
spec:
  selector:
    app: devflow
    tier: backend
  ports:
    - port: 80
      targetPort: http
