k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devflow-frontend
  namespace: devflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devflow
      tier: frontend
  template:
    metadata:
      labels:
        app: devflow
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/vicky2-code/devops-platform-frontend:latest
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: devflow-frontend
  namespace: devflow
spec:
  selector:
    app: devflow
    tier: frontend
  ports:
    - port: 80
      targetPort: http
